--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title><Test-GIT-2></Test-GIT-2></title>
 </head>
 <body>
+    <header>My header</header>
     <script src="index.js"></script>
 </body>
 </html>
